--- a/src/moviecollector/gui/views/MovieCreator.fxml
+++ b/src/moviecollector/gui/views/MovieCreator.fxml
@@ -10,16 +10,16 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="156.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField layoutX="48.0" layoutY="14.0" prefHeight="26.0" prefWidth="270.0" />
-      <Button layoutX="239.0" layoutY="118.0" mnemonicParsing="false" text="Add Movie" />
-      <TextField layoutX="88.0" layoutY="86.0" prefHeight="26.0" prefWidth="229.0" />
+      <TextField fx:id="movieTitle" layoutX="48.0" layoutY="14.0" prefHeight="26.0" prefWidth="270.0" />
+      <Button fx:id="addMovie" layoutX="239.0" layoutY="118.0" mnemonicParsing="false" text="Add Movie" />
+      <TextField fx:id="fileLocation" layoutX="88.0" layoutY="86.0" prefHeight="26.0" prefWidth="229.0" />
       <Text layoutX="14.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Genre" />
       <Text layoutX="13.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title" wrappingWidth="33.33673095703125" />
-      <ComboBox layoutX="47.0" layoutY="50.0" prefHeight="26.0" prefWidth="270.0" />
+      <ComboBox fx:id="genreDropdown" layoutX="47.0" layoutY="50.0" prefHeight="26.0" prefWidth="270.0" />
       <Text layoutX="14.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File Location" />
-      <Button layoutX="11.0" layoutY="117.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="74.0" text="Close" />
-      <Button layoutX="127.0" layoutY="118.0" mnemonicParsing="false" text="Add Genre" />
-      <ListView layoutX="321.0" layoutY="14.0" prefHeight="130.0" prefWidth="104.0">
+      <Button fx:id="movieClose" layoutX="11.0" layoutY="117.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="74.0" text="Close" />
+      <Button fx:id="movieAddGenre" layoutX="127.0" layoutY="118.0" mnemonicParsing="false" text="Add Genre" />
+      <ListView fx:id="movieTxtField" layoutX="321.0" layoutY="14.0" prefHeight="130.0" prefWidth="104.0">
          <effect>
             <Glow />
          </effect></ListView>
