--- a/src/moviecollector/gui/views/MovieCollectorView.fxml
+++ b/src/moviecollector/gui/views/MovieCollectorView.fxml
@@ -10,7 +10,7 @@
 <AnchorPane id="AnchorPane" prefHeight="503.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="moviecollector.gui.controllers.MovieCollectorController">
    <children>
       <ListView fx:id="movieListView" layoutX="321.0" layoutY="100.0" prefHeight="357.0" prefWidth="285.0" />
-      <ListView fx:id="categoryListView" layoutX="14.0" layoutY="99.0" prefHeight="357.0" prefWidth="285.0" />
+      <ListView fx:id="categoryListView" layoutX="14.0" layoutY="99.0" onMouseClicked="#categorySelected" prefHeight="357.0" prefWidth="285.0" />
       <Button fx:id="deleteCategoryButton" layoutX="14.0" layoutY="467.0" mnemonicParsing="false" text="Delete" />
       <Button fx:id="addMovieButton" layoutX="379.0" layoutY="467.0" mnemonicParsing="false" text="Add" />
       <Button fx:id="deleteMovieButton" layoutX="321.0" layoutY="467.0" mnemonicParsing="false" text="Delete" />
