--- a/src/moviecollector/gui/views/MovieCollectorViewOpt2.fxml
+++ b/src/moviecollector/gui/views/MovieCollectorViewOpt2.fxml
@@ -4,25 +4,31 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="322.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="322.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ListView layoutX="7.0" layoutY="113.0" prefHeight="250.0" prefWidth="310.0" />
+      <ListView layoutX="7.0" layoutY="113.0" prefHeight="250.0" prefWidth="310.0">
+         <effect>
+            <DropShadow />
+         </effect></ListView>
       <Text layoutX="7.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Movies" />
-      <ComboBox layoutX="7.0" layoutY="68.0" prefHeight="26.0" prefWidth="310.0" promptText="Genre" />
+      <ComboBox layoutX="7.0" layoutY="68.0" prefHeight="26.0" prefWidth="310.0" promptText="Genre" AnchorPane.bottomAnchor="327.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="68.0" />
       <Button layoutX="7.0" layoutY="42.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="Add Genre" />
       <Button layoutX="82.0" layoutY="42.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="110.0" text="Delete Catagories" />
-      <Button layoutX="7.0" layoutY="393.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="Add Movie" />
-      <Button layoutX="82.0" layoutY="393.0" mnemonicParsing="false" text="Delete Movie" />
-      <ComboBox fx:id="addRatingSelector" layoutX="168.0" layoutY="392.0" prefHeight="26.0" prefWidth="110.0" promptText="Add Rating" />
-      <Button fx:id="addRating" layoutX="278.0" layoutY="393.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="38.0" text="Add" />
+      <Button layoutX="7.0" layoutY="397.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="Add Movie" />
+      <Button layoutX="82.0" layoutY="398.0" mnemonicParsing="false" text="Delete Movie" />
+      <ComboBox fx:id="addRatingSelector" layoutX="166.0" layoutY="397.0" prefHeight="26.0" prefWidth="110.0" promptText="Add Rating" />
+      <Button fx:id="addRating" layoutX="276.0" layoutY="397.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="38.0" text="Add" />
       <TextField layoutX="191.0" layoutY="42.0" prefHeight="26.0" prefWidth="128.0" promptText="Enter movie title..." />
       <Button fx:id="sortByTitle" layoutX="7.0" layoutY="15.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Sort By Title" />
       <ComboBox fx:id="minimumRating" layoutX="93.0" layoutY="15.0" prefHeight="26.0" prefWidth="128.0" promptText="Minimum rating" />
       <Button fx:id="searchEnterMovieTitle" layoutX="219.0" layoutY="15.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="98.0" text="Search" />
-      <Button fx:id="playMovieButton" layoutX="7.0" layoutY="363.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="310.0" text="Play" />
+      <Button fx:id="playMovieButton" layoutX="7.0" layoutY="363.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="310.0" text="Play">
+         <effect>
+            <DropShadow />
+         </effect></Button>
    </children>
 </AnchorPane>
