--- a/src/moviecollector/gui/views/MovieCollectorView.fxml
+++ b/src/moviecollector/gui/views/MovieCollectorView.fxml
@@ -5,27 +5,35 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="AnchorPane" prefHeight="503.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="moviecollector.gui.controllers.MovieCollectorController">
    <children>
-      <ListView fx:id="movieListView" layoutX="321.0" layoutY="100.0" prefHeight="357.0" prefWidth="285.0" />
-      <ListView fx:id="categoryListView" layoutX="14.0" layoutY="99.0" onMouseClicked="#categorySelected" prefHeight="357.0" prefWidth="285.0" />
+      <ListView fx:id="movieListView" layoutX="322.0" layoutY="105.0" prefHeight="351.0" prefWidth="285.0">
+         <effect>
+            <InnerShadow />
+         </effect></ListView>
+      <ListView fx:id="categoryListView" layoutX="14.0" layoutY="105.0" onMouseClicked="#categorySelected" prefHeight="351.0" prefWidth="285.0">
+         <effect>
+            <InnerShadow />
+         </effect></ListView>
       <Button fx:id="deleteCategoryButton" layoutX="14.0" layoutY="467.0" mnemonicParsing="false" text="Delete" />
       <Button fx:id="addMovieButton" layoutX="379.0" layoutY="467.0" mnemonicParsing="false" text="Add" />
       <Button fx:id="deleteMovieButton" layoutX="321.0" layoutY="467.0" mnemonicParsing="false" text="Delete" />
-      <Button fx:id="addCategoryButton" layoutX="73.0" layoutY="467.0" mnemonicParsing="false" text="Add" />
+      <Button fx:id="addCategoryButton" layoutX="73.0" layoutY="467.0" mnemonicParsing="false" text="Add Catagories" />
       <Label layoutX="14.0" layoutY="77.0" prefHeight="25.0" prefWidth="285.0" text="Categories" />
-      <Label layoutX="320.0" layoutY="77.0" prefHeight="26.0" prefWidth="149.0" text="Movies" />
-      <TextField fx:id="filterTitleField" layoutX="321.0" layoutY="43.0" promptText="Enter movie title..." />
-      <Button fx:id="playMovieButton" layoutX="536.0" layoutY="47.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="70.0" text="Play" />
-      <Button fx:id="editCategoryButton" layoutX="126.0" layoutY="467.0" mnemonicParsing="false" text="Edit" />
-      <Button fx:id="editMovieButton" layoutX="426.0" layoutY="467.0" mnemonicParsing="false" text="Edit" />
-      <Button fx:id="clearFiltersButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Clear filter" />
-      <ComboBox fx:id="addRatingSelector" layoutX="473.0" layoutY="466.0" prefHeight="26.0" prefWidth="105.0" promptText="Add Rating" />
-      <Button fx:id="addRating" layoutX="579.0" layoutY="466.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="38.0" text="Add" />
-      <ComboBox fx:id="minimumRating" layoutX="320.0" layoutY="14.0" prefWidth="150.0" promptText="Minimum rating" />
-      <Button fx:id="sortByTitle" layoutX="478.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="128.0" text="Sort By Title" />
-      <Button fx:id="searchEnterMovieTitle" layoutX="464.0" layoutY="43.0" mnemonicParsing="false" text="Search" />
+      <Label layoutX="320.0" layoutY="77.0" prefHeight="26.0" prefWidth="38.0" text="Movies" />
+      <TextField fx:id="filterTitleField" layoutX="367.0" layoutY="44.0" prefHeight="25.0" prefWidth="150.0" promptText="Enter movie title..." />
+      <Button fx:id="playMovieButton" layoutX="521.0" layoutY="44.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="85.0" text="Play">
+         <effect>
+            <DropShadow />
+         </effect></Button>
+      <Button fx:id="clearFiltersButton" layoutX="311.0" layoutY="14.0" mnemonicParsing="false" text="Clear filter" />
+      <ComboBox fx:id="addRatingSelector" layoutX="367.0" layoutY="71.0" prefHeight="26.0" prefWidth="150.0" promptText="Add Rating" />
+      <ComboBox fx:id="minimumRating" layoutX="388.0" layoutY="14.0" prefHeight="25.0" prefWidth="129.0" promptText="Minimum rating" />
+      <Button fx:id="sortByTitle" layoutX="521.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="85.0" text="Sort By Title" />
+      <Button fx:id="searchEnterMovieTitle" layoutX="311.0" layoutY="44.0" mnemonicParsing="false" text="Search" />
    </children>
 </AnchorPane>
