--- a/src/moviecollector/gui/views/MovieCollectorViewOpt2.fxml
+++ b/src/moviecollector/gui/views/MovieCollectorViewOpt2.fxml
@@ -10,19 +10,19 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="322.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ListView layoutY="104.0" prefHeight="250.0" prefWidth="323.0">
+      <ListView fx:id="movieList" layoutY="104.0" prefHeight="250.0" prefWidth="323.0">
          <effect>
             <DropShadow />
          </effect></ListView>
       <Text layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Movies" wrappingWidth="323.19999999999993" />
-      <ComboBox layoutY="55.0" prefHeight="30.0" prefWidth="108.0" promptText="Genre" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="213.0" AnchorPane.topAnchor="55.0" />
-      <Button layoutY="29.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="108.0" text="Add Genre" />
-      <Button layoutX="106.0" layoutY="29.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="108.0" text="Delete Genre" />
-      <Button layoutY="389.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="75.0" text="Add Movie" />
-      <Button layoutX="75.0" layoutY="390.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="86.0" text="Delete Movie" />
+      <ComboBox fx:id="genre1" layoutY="55.0" prefHeight="30.0" prefWidth="108.0" promptText="Genre" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="213.0" AnchorPane.topAnchor="55.0" />
+      <Button fx:id="addCategory" layoutY="29.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="108.0" text="Add Genre" />
+      <Button fx:id="deleteCategory" layoutX="106.0" layoutY="29.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="108.0" text="Delete Genre" />
+      <Button fx:id="addMovie" layoutY="389.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="75.0" text="Add Movie" />
+      <Button fx:id="deleteMovie" layoutX="75.0" layoutY="390.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="86.0" text="Delete Movie" />
       <ComboBox fx:id="addRatingSelector" layoutX="158.0" layoutY="390.0" prefHeight="34.0" prefWidth="110.0" promptText="Add Rating" />
       <Button fx:id="addRating" layoutX="269.0" layoutY="390.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="54.0" text="Add" />
-      <TextField layoutX="215.0" layoutY="29.0" prefHeight="26.0" prefWidth="108.0" promptText="Enter movie title..." />
+      <TextField fx:id="enterMovieTitle" layoutX="215.0" layoutY="29.0" prefHeight="26.0" prefWidth="108.0" promptText="Enter movie title..." />
       <Button fx:id="sortByTitle" layoutY="-2.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="86.0" text="Sort By Title" />
       <ComboBox fx:id="minimumRating" layoutX="87.0" layoutY="-2.0" prefHeight="30.0" prefWidth="128.0" promptText="Minimum rating" />
       <Button fx:id="searchEnterMovieTitle" layoutX="215.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="108.0" text="Search" />
@@ -30,7 +30,7 @@
          <effect>
             <DropShadow />
          </effect></Button>
-      <ComboBox layoutX="108.0" layoutY="55.0" prefHeight="30.0" prefWidth="108.0" promptText="Genre" />
-      <ComboBox layoutX="213.0" layoutY="55.0" prefHeight="30.0" prefWidth="110.0" promptText="Genre" />
+      <ComboBox fx:id="genre2" layoutX="108.0" layoutY="55.0" prefHeight="30.0" prefWidth="108.0" promptText="Genre" />
+      <ComboBox fx:id="genre3" layoutX="213.0" layoutY="55.0" prefHeight="30.0" prefWidth="110.0" promptText="Genre" />
    </children>
 </AnchorPane>
