--- a/src/moviecollector/gui/controllers/AddEditCategoryView.fxml
+++ b/src/moviecollector/gui/controllers/AddEditCategoryView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
@@ -9,7 +10,13 @@
    <children>
       <TextField fx:id="categoryTextField" layoutX="71.0" layoutY="14.0" prefHeight="25.0" prefWidth="142.0" promptText="Enter name..." />
       <Text layoutX="14.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Category" />
-      <Button fx:id="saveCategoryButton" layoutX="17.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleSaveCategory" prefHeight="26.0" prefWidth="102.0" text="Save category" />
-      <Button fx:id="cancelButton" layoutX="128.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="85.0" text="Cancel" />
+      <Button fx:id="saveCategoryButton" layoutX="20.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleSaveCategory" prefHeight="25.0" prefWidth="102.0" text="Save category">
+         <effect>
+            <DropShadow />
+         </effect></Button>
+      <Button fx:id="cancelButton" layoutX="128.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="85.0" text="Cancel">
+         <effect>
+            <DropShadow />
+         </effect></Button>
    </children>
 </AnchorPane>
