--- a/src/moviecollector/gui/views/EditMovie.fxml
+++ b/src/moviecollector/gui/views/EditMovie.fxml
@@ -6,18 +6,17 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="322.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ListView fx:id="movieList" layoutY="3.0" prefHeight="333.0" prefWidth="323.0">
+      <ListView fx:id="movieListTxtField" layoutY="3.0" prefHeight="333.0" prefWidth="322.0">
          <effect>
             <DropShadow />
          </effect>
       </ListView>
-      <Button fx:id="addMovie" layoutY="366.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="75.0" text="Add Movie" />
-      <Button fx:id="deleteMovie" layoutX="75.0" layoutY="366.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="86.0" text="Delete Movie" />
-      <Button fx:id="addRating" layoutX="162.0" layoutY="366.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="75.0" text="Edit Movie" />
-      <TextField layoutY="339.0" prefHeight="26.0" prefWidth="322.0" promptText="New genre name..." />
-      <Button fx:id="addMovie1" layoutX="237.0" layoutY="366.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="86.0" text="Locate movie" />
+      <Button fx:id="addMovieButton" layoutY="366.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="75.0" text="Add Movie" />
+      <Button fx:id="deleteMovieButton" layoutX="75.0" layoutY="366.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="86.0" text="Delete Movie" />
+      <Button fx:id="editMovieButton" layoutX="162.0" layoutY="366.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="75.0" text="Edit Movie" />
+      <TextField fx:id="newMovieButton" layoutY="339.0" prefHeight="26.0" prefWidth="322.0" promptText="New Movie name..." />
+      <Button fx:id="locateMovieButton" layoutX="237.0" layoutY="366.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="86.0" text="Locate movie" />
    </children>
 </AnchorPane>
