--- a/src/moviecollector/gui/views/MovieCollectorViewOpt2.fxml
+++ b/src/moviecollector/gui/views/MovieCollectorViewOpt2.fxml
@@ -15,22 +15,20 @@
             <DropShadow />
          </effect></ListView>
       <Text layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Movies" wrappingWidth="323.19999999999993" />
-      <ComboBox fx:id="genre1" layoutY="55.0" prefHeight="30.0" prefWidth="108.0" promptText="Genre" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="213.0" AnchorPane.topAnchor="55.0" />
-      <Button fx:id="addCategory" layoutY="29.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="108.0" text="Add Genre" />
-      <Button fx:id="deleteCategory" layoutX="106.0" layoutY="29.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="108.0" text="Delete Genre" />
-      <Button fx:id="addMovie" layoutY="389.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="75.0" text="Add Movie" />
-      <Button fx:id="deleteMovie" layoutX="75.0" layoutY="390.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="86.0" text="Delete Movie" />
-      <ComboBox fx:id="addRatingSelector" layoutX="158.0" layoutY="390.0" prefHeight="34.0" prefWidth="110.0" promptText="Add Rating" />
-      <Button fx:id="addRating" layoutX="269.0" layoutY="390.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="54.0" text="Add" />
-      <TextField fx:id="enterMovieTitle" layoutX="215.0" layoutY="29.0" prefHeight="26.0" prefWidth="108.0" promptText="Enter movie title..." />
-      <Button fx:id="sortByTitle" layoutY="-2.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="86.0" text="Sort By Title" />
-      <ComboBox fx:id="minimumRating" layoutX="87.0" layoutY="-2.0" prefHeight="30.0" prefWidth="128.0" promptText="Minimum rating" />
-      <Button fx:id="searchEnterMovieTitle" layoutX="215.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="108.0" text="Search" />
+      <ComboBox fx:id="category1" layoutY="55.0" prefHeight="30.0" prefWidth="108.0" promptText="Genre" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="213.0" AnchorPane.topAnchor="55.0" />
+      <Button fx:id="addCategoryButton" layoutX="83.0" layoutY="390.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="86.0" text="Edit Genre" />
+      <Button fx:id="editMovieButton" layoutX="-1.0" layoutY="390.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="86.0" text="Edit Movies" />
+      <ComboBox fx:id="selectRatingButton" layoutX="169.0" layoutY="390.0" prefHeight="34.0" prefWidth="117.0" promptText="Select Rating" />
+      <Button fx:id="addRatingButton" layoutX="282.0" layoutY="390.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="41.0" text="Add" />
+      <TextField fx:id="enterMovieTitle" layoutX="1.0" layoutY="29.0" prefHeight="26.0" prefWidth="322.0" promptText="Enter movie title..." />
+      <Button fx:id="sortByTitleButton" layoutY="-2.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="86.0" text="Sort By Title" />
+      <ComboBox fx:id="minimumRatingButton" layoutX="87.0" layoutY="-2.0" prefHeight="30.0" prefWidth="128.0" promptText="Minimum rating" />
+      <Button fx:id="searchButton" layoutX="215.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="108.0" text="Search" />
       <Button fx:id="playMovieButton" layoutY="354.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="322.0" text="Play">
          <effect>
             <DropShadow />
          </effect></Button>
-      <ComboBox fx:id="genre2" layoutX="108.0" layoutY="55.0" prefHeight="30.0" prefWidth="108.0" promptText="Genre" />
-      <ComboBox fx:id="genre3" layoutX="213.0" layoutY="55.0" prefHeight="30.0" prefWidth="110.0" promptText="Genre" />
+      <ComboBox fx:id="category2" layoutX="108.0" layoutY="55.0" prefHeight="30.0" prefWidth="108.0" promptText="Genre" />
+      <ComboBox fx:id="category3" layoutX="213.0" layoutY="55.0" prefHeight="30.0" prefWidth="110.0" promptText="Genre" />
    </children>
 </AnchorPane>
