--- a/src/moviecollector/gui/controllers/AddEditMovieView.fxml
+++ b/src/moviecollector/gui/controllers/AddEditMovieView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="152.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="moviecollector.gui.controllers.AddEditMovieViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="152.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="moviecollector.gui.controllers.AddEditMovieController">
    <children>
       <TextField fx:id="titleTextField" layoutX="56.0" layoutY="6.0" prefHeight="26.0" prefWidth="258.0" promptText="Enter movie title...">
          <effect>
