--- a/src/moviecollector/gui/views/MovieCollectorView.fxml
+++ b/src/moviecollector/gui/views/MovieCollectorView.fxml
@@ -31,10 +31,10 @@
             <DropShadow />
          </effect></Button>
       <Button fx:id="clearFiltersButton" layoutX="311.0" layoutY="14.0" mnemonicParsing="false" text="Clear filter" />
-      <ComboBox fx:id="addRatingSelector" layoutX="367.0" layoutY="71.0" prefHeight="26.0" prefWidth="150.0" promptText="Add Rating" />
+      <ComboBox fx:id="addRatingSelector" layoutX="367.0" layoutY="71.0" onAction="#handleAddRating" prefHeight="26.0" prefWidth="150.0" promptText="Add Rating" />
       <ComboBox fx:id="minimumRating" layoutX="388.0" layoutY="14.0" prefHeight="25.0" prefWidth="129.0" promptText="Minimum rating" />
       <Button fx:id="sortByTitle" layoutX="521.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="85.0" text="Sort By Title" />
-      <Button fx:id="searchEnterMovieTitle" layoutX="311.0" layoutY="44.0" mnemonicParsing="false" text="Search" />
+      <Button fx:id="searchButton" layoutX="311.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleSearch" text="Search" />
       <Button fx:id="editMovieButton" layoutX="434.0" layoutY="467.0" mnemonicParsing="false" onAction="#handleEditMovie" text="Edit" />
       <Button fx:id="editCategoryButton" layoutX="121.0" layoutY="467.0" mnemonicParsing="false" onAction="#handleEditCategory" text="Edit" />
    </children>
