--- a/src/moviecollector/gui/views/MovieCollectorView.fxml
+++ b/src/moviecollector/gui/views/MovieCollectorView.fxml
@@ -30,12 +30,12 @@
          <effect>
             <DropShadow />
          </effect></Button>
-      <Button fx:id="clearFiltersButton" layoutX="311.0" layoutY="14.0" mnemonicParsing="false" text="Clear filter" />
+      <Button fx:id="clearFiltersButton" layoutX="311.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleClearFilter" text="Clear filter" />
       <ComboBox fx:id="addRatingSelector" layoutX="367.0" layoutY="71.0" onAction="#handleAddRating" prefHeight="26.0" prefWidth="150.0" promptText="Add Rating" />
       <ComboBox fx:id="minimumRating" layoutX="388.0" layoutY="14.0" prefHeight="25.0" prefWidth="129.0" promptText="Minimum rating" />
-      <Button fx:id="sortByTitle" layoutX="521.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="85.0" text="Sort By Title" />
-      <Button fx:id="searchButton" layoutX="311.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleSearch" text="Search" />
+      <Button fx:id="searchButton" layoutX="311.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleSetFilter" text="Filter" />
       <Button fx:id="editMovieButton" layoutX="434.0" layoutY="467.0" mnemonicParsing="false" onAction="#handleEditMovie" text="Edit" />
       <Button fx:id="editCategoryButton" layoutX="121.0" layoutY="467.0" mnemonicParsing="false" onAction="#handleEditCategory" text="Edit" />
+      <ComboBox fx:id="sortCombobox" layoutX="521.0" layoutY="14.0" onAction="#handleSorting" prefHeight="25.0" prefWidth="85.0" promptText="Sort..." />
    </children>
 </AnchorPane>
